@@ -1,3 +1,9 @@
+2009-05-05  Stefan Kost  <ensonic@users.sf.net>
+
+	* Jeskola/Noise/Makefile.am:
+	* Jeskola/Noise/Makefile.am (added):
+	  Add missing Makefile.am.
+
 2009-05-04  Stefan Kost  <ensonic@users.sf.net>
 
 	* FSM/dspchips/DSPChips.h:
